<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="5"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="5"
        android:title="@string/settings"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
         />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="5"
        android:title="@string/history"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
    <item
        android:id="@+id/action_like"
        android:orderInCategory="5"
        android:title="@string/like"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
</menu>